# tasks

./: .gitignore  pyproject.toml
.github/workflows/: api.yml
services/tasks_api/: .flake8  main.py  models.py  package.json  pyproject.toml  requirements.txt  serverless.yml  store.py  tests.py
services/tasks_api/resources/: cognito.yml  dynamodb.yml
