[project]
name = "tasks-api"
version = "0.1.0"
description = "Fast API example"
authors = [
    {name = "Tyler Nguyen",email = "tylernn812@gmail.com"}
]
readme = "README.md"
requires-python = "^3.9"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
bandit = "^1.8.3"

