[tool.poetry]
name = "tasks-api"
version = "0.1.0"
description = "to do task"
authors = ["Tyler Nguyen <tylernn812@gmail.com>"]

[tool.poetry.dependencies]
python = "3.13.2"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
mangum = "^0.19.0"
boto3 = "^1.37.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
bandit = "^1.8.3"
moto = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
